[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alteriom-webhook-client"
version = "0.1.0"
description = "Python SDK for Alteriom Webhook Connector — HMAC verification, event parsing, FastAPI integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "fastapi>=0.100.0",
    "uvicorn>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/alteriom_webhook_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
